<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/header_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin_logo_256"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/header_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/header_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gold_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/header_vision_range"
        app:layout_constraintTop_toBottomOf="@+id/vision_range_icon"
        app:srcCompat="@drawable/gold"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/header_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/gold_icon"
        app:layout_constraintTop_toBottomOf="@+id/vision_range_icon" />

    <ImageView
        android:id="@+id/wallet_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/header_vision_range"
        app:layout_constraintTop_toBottomOf="@+id/header_username"
        app:srcCompat="@drawable/wallet"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/header_wallet_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/wallet_icon"
        app:layout_constraintTop_toBottomOf="@+id/header_username" />

    <ImageView
        android:id="@+id/vision_range_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/header_icon"
        app:layout_constraintTop_toBottomOf="@+id/header_username"
        app:srcCompat="@drawable/vision_range"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/header_vision_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize = "16sp"
        app:layout_constraintStart_toEndOf="@id/vision_range_icon"
        app:layout_constraintTop_toBottomOf="@+id/header_username" />

    <ImageView
        android:id="@+id/glasses_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/header_icon"
        app:layout_constraintTop_toBottomOf="@+id/vision_range_icon"
        app:srcCompat="@drawable/ic_glasses"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/header_has_glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/glasses_icon"
        app:layout_constraintTop_toBottomOf="@+id/vision_range_icon"
        app:srcCompat="@drawable/ic_close_black_24dp"
        tools:ignore="ContentDescription"/>

</android.support.constraint.ConstraintLayout>